--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ futures = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ws = "*"
+log = "0.4.0"
+env_logger = "0.6.1"
