--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,11 @@ authors = ["beautifularea <beautifularea@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-websocket = "0.22.4"
-hyper = "^0.10.6"
 sha1 = "0.6"
 base64 = "0.10.0"
 futures = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ws = "*"
+ws = { path = "../ws-rs" }
 log = "0.4.0"
 env_logger = "0.6.1"
