1，调整工程结构[lib,bin]共存。2，实现部分支付接口。【修改略多，错误的commit示范】

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,11 @@ serde_json = "1.0"
 ws = { path = "../ws-rs" }
 log = "0.4.0"
 env_logger = "0.6.1"
+
+[lib]
+name = "mylib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "mybin"
+path = "src/main.rs"
