--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 sha1 = "0.6"
-base64 = "0.10.0"
+# base64 = "0.10.0"
 futures = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -14,6 +14,8 @@ ws = { path = "../ws-rs" }
 log = "0.4.0"
 env_logger = "0.6.1"
 bs58 = { git = "https://github.com/mycorrhiza/bs58-rs.git" }
+rand = "0.6"
+ring = "0.14.6"
 
 [lib]
 name = "mylib"
