--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ compare = "0.1"
 rust-crypto = "^0.2"
 hex = "0.3.2"
 ed25519-dalek = "0.9.1"
+byteorder = "1.3.2"
 
 [dependencies.x25519-dalek]
 version = "^0.5"
