--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 
 [dependencies]
 sha1 = "0.6"
-# base64 = "0.10.0"
 futures = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -25,6 +24,7 @@ rust-crypto = "^0.2"
 hex = "0.3.2"
 ed25519-dalek = "0.9.1"
 byteorder = "1.3.2"
+lazy_static = "1.3.0"
 
 [dependencies.x25519-dalek]
 version = "^0.5"
