--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ hex = "0.3.2"
 ed25519-dalek = "0.9.1"
 byteorder = "1.3.2"
 lazy_static = "1.3.0"
+typename = "0.1.1"
+global = "0.4.0"
 
 [dependencies.x25519-dalek]
 version = "^0.5"
