--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ ed25519-dalek = "0.9.1"
 byteorder = "1.3.2"
 lazy_static = "1.3.0"
 typename = "0.1.1"
+ryu = "1.0"
 
 [dependencies.x25519-dalek]
 version = "^0.5"
