--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ lazy_static = "1.3.0"
 typename = "0.1.1"
 ryu = "1.0"
 void = "1.0.2"
+url = "1.7.2"
 
 [dependencies.x25519-dalek]
 version = "^0.5"
