--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ sha1 = "0.6"
 futures = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ws = { path = "../ws-rs" }
+#ws = { path = "../ws-rs" }
+ws = "0.8.1"
 log = "0.4.0"
 env_logger = "0.6.1"
 
