replace bs58 to basex-rs(myself git :)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ serde_json = "1.0"
 ws = "0.8.1"
 log = "0.4.0"
 env_logger = "0.6.1"
-bs58 = "0.2.2"
 rand = "0.6"
 ring = "0.14.6"
 secp256k1 = "0.13.0"
@@ -29,3 +28,4 @@ typename = "0.1.1"
 ryu = "1.0"
 void = "1.0.2"
 url = "1.7.2"
+basex-rs = { git = "https://github.com/zTgx/basex-rs.git" }
