--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ ed25519-dalek = "0.9.1"
 
 serde = { version = "1.0", features = ["derive"] }
 basex-rs = { git = "https://github.com/zTgx/basex-rs.git" }
+cast-rs = { git = "https://github.com/zTgx/cast-rs.git" }
