--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 
 [package]
-license = "MIT"
 name = "jlib"
-authors = ["zTgx <beautifularea@163.com>"]
-readme = "README.md"
-repository = "https://github.com/zTgx/jlib-rs.git"
 version = "0.0.1"
+authors = ["zTgx <beautifularea@163.com>"]
+repository = "https://github.com/zTgx/jlib-rs.git"
+readme = "README.md"
+keywords = ["blockchain", "crypto"]
+categories = [ "blockchain" ]
+license = "MIT/Apache-2.0"
+exclude = [ "/.travis.yml" , "/docs"]
+description = "A lightweight blockchain lib."
 
 [dependencies]
 num = "0.2"
@@ -29,4 +33,4 @@ ed25519-dalek = "0.9.1"
 
 serde = { version = "1.0", features = ["derive"] }
 basex-rs = { git = "https://github.com/zTgx/basex-rs.git" }
-cast-rs = { git = "https://github.com/zTgx/cast-rs.git" }
+cast-rs = "0.1.1"
