--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 keywords = ["blockchain", "crypto"]
 categories = [ "blockchain" ]
 license = "MIT/Apache-2.0"
-exclude = [ "/.travis.yml" , "/docs"]
+exclude = [ "/.travis.yml" ]
 description = "A lightweight blockchain lib."
 
 [dependencies]
