--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,5 @@ lazy_static = "1.3.0"
 ed25519-dalek = "0.9.1"
 
 serde = { version = "1.0", features = ["derive"] }
-basex-rs = { git = "https://github.com/zTgx/basex-rs.git" }
+basex-rs = "0.1.0"
 cast-rs = "0.1.1"
