--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["zTgx <beautifularea@163.com>"]
 repository = "https://github.com/zTgx/jlib-rs.git"
 readme = "README.md"
 keywords = ["blockchain", "crypto"]
-categories = [ "blockchain" ]
+categories = [ "cryptography" ]
 license = "MIT/Apache-2.0"
 exclude = [ "/.travis.yml" ]
 description = "A lightweight blockchain lib."
