--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,7 @@ ed25519-dalek = "0.9.1"
 serde = { version = "1.0", features = ["derive"] }
 basex-rs = "0.1.0"
 cast-rs = "0.2.0"
+juniper = "0.9.2"
+actix-web = "1.0.5"
+futures = "0.1"
+serde_derive = "1.0"
