1, fix travis nightly 2, add model/util 3, finish server_info

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: rust
 sudo: false
 
 rust:
-  - stable
-  
+  - nightly
+
 script:
-  - cargo build --verbose --all  
- 
+  - cargo build --verbose --all
