--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ serde = { version = "1.0", features = ["derive"] }
 basex-rs = "0.1.1"
 cast-rs = "0.2.1"
 serde_derive = "1.0"
+phf = { version = "0.8", features = ["macros"] }
