--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ lazy_static = "1.3.0"
 ed25519-dalek = "0.9.1"
 serde = { version = "1.0", features = ["derive"] }
 basex-rs = "0.1.1"
-# cast-rs = "0.2.1"
 serde_derive = "1.0"
 phf = { version = "0.8", features = ["macros"] }
 libsm = "0.3.0"
 hex = "0.4.3"
+rfc1751 = "0.1.0"
