--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,5 @@ libsm = "0.3.0"
 hex = "0.4.3"
 rfc1751 = "0.1.0"
 ipfs-unixfs = "0.2.0"
+# ipfs-unixfs = { path = "../../rust-src/rust-ipfs/unixfs" } # 调试使用
+sha3 = "0.9.1" # ethereum Keccak256
